Fix icons for autosave on small devices

--- a/src/AppBundle/Resources/assets/scss/digideps/_autosave.scss
+++ b/src/AppBundle/Resources/assets/scss/digideps/_autosave.scss
@@ -7,22 +7,31 @@
     padding-left: 40px;
     text-align: left;
     width: 130px;
+    min-height: 29px;
 
     &[data-status="saved"] {
         background: top left url("images/icons/savetick.png") no-repeat;
+        background-size: 35px 29px;
+        
+        @include media(mobile) {
+            background-size: 26.5px 22px;    
+        }
         
         @include device-pixel-ratio() {
             background: top left url("images/icons/savetick_2x.png") no-repeat;
-            background-size: 35px 29px;
         }
     }
 
     &[data-status="saving"] {
         background: top left url("images/icons/savespin.png") no-repeat;
+        background-size: 24px 26px;
+        
+        @include media(mobile) {
+            background-size: 20px 22px;
+        }
         
         @include device-pixel-ratio() {
             background: top left url("images/icons/savespin_2x.png") no-repeat;
-            background-size: 24px 26px;
         }
     }
 
